<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Flock">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/babyBuyButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/babybutton"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/BabyDesc">
            </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nestBuyButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/nestbutton"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/NestDesc">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mommaBuyButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/mommabutton"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/MommaDesc">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/BabyDesc"
            android:layout_width="188dp"
            android:layout_height="95dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/babybuy"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView3"
            tools:layout_editor_absoluteX="222dp" />

        <TextView
            android:id="@+id/NestDesc"
            android:layout_width="188dp"
            android:layout_height="95dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/nestbuy"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imageView4"
            tools:layout_editor_absoluteX="222dp" />

        <TextView
            android:id="@+id/MommaDesc"
            android:layout_width="188dp"
            android:layout_height="95dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/mommabuy"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView5"
            tools:layout_editor_absoluteX="222dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="156dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/babybirb"
            app:layout_constraintBottom_toTopOf="@id/imageView4"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="156dp"
            android:layout_height="148dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/nest"
            app:layout_constraintBottom_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="156dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/mommabirb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>